FullQa New/src/ZoomInfo/objects/ZoomSessions__c.object
<CustomObject>
    <fields>
        <fullName>JWT_token__c</fullName>
        <label>JWT_token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JWT_token_expire__c</fullName>
        <label>JWT_token_expire</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>id_token__c</fullName>
        <label>id_token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id_token_expire__c</fullName>
        <label>id_token_expire</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>modified_ts__c</fullName>
        <label>modified_ts</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>session_token__c</fullName>
        <label>session_token</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>session_token_expire__c</fullName>
        <label>session_token_expire</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>user_id__c</fullName>
        <externalId>true</externalId>
        <label>user_id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_session_token_ext__c</fullName>
        <label>zoom_session_token_ext</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zoom_username__c</fullName>
        <label>zoom_username</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ZoomSessions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>user_id__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ZoomSessions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZoomSessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>